added events filter markup

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -26,6 +26,13 @@
         <button class="btn btn-primary btn-start-server">Start Server</button>
         <button class="btn btn-secondary btn-stop-server">Stop Server</button>
         <button class="btn btn-clear-events">Clear Events</button>
+        <button class="btn btn-filter-events">Filter Events</button>
+        <input
+          type="text"
+          placeholder="Filter"
+          class="input input-filter-text"
+        />
+        <button class="btn btn-clear-filter">X</button>
       </div>
     </div>
 
