adds filter key select dropdown markup

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -27,6 +27,11 @@
         <button class="btn btn-secondary btn-stop-server">Stop Server</button>
         <button class="btn btn-clear-events">Clear Events</button>
         <button class="btn btn-filter-events">Filter Events</button>
+        <select class="select select-filter-key" value="name">
+          <option value="name">Name</option>
+          <option value="message">Message</option>
+          <option value="details">Details</option>
+        </select>
         <input
           type="text"
           placeholder="Filter"
